fixed css lecturer section styles
fixed messed up lecturer section styles and added new section content with styles

--- a/lecturer page/style.css
+++ b/lecturer page/style.css
@@ -11,7 +11,6 @@ header nav {
     justify-content: space-between;
     align-items: center;
     padding: 10px 0px;
-    
 }
 
 header aside {
@@ -53,6 +52,10 @@ header .menu-aside li a:hover {
     transition: 1s;
 }
 
+header .menu-aside li .active {
+    color: #C99836;
+}
+
 header .reg-auth {
     width: 60%;
     display: flex;
@@ -76,111 +79,41 @@ header .reg-auth button:hover {
     transition: 1s;
 }
 
-main .info-section {
+main .lecturer-section {
     width: 90%;
-    margin: 40px auto;
+    margin: auto;
     display: flex;
     justify-content: space-between;
+    padding: 40px 0px;
 }
 
-main .info-section .left-info {
+main .lecturer-section .left {
     width: 45%;
 }
 
-main .info-section .left  {
-    
-}
-
-main .info-section .right-info {
-    width: 50%;
-}
-
-main .info-section .right-info .text-content {
-    padding: 50px 0px;
-}
-
-.info-section .right-info .text-content h1 {
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-    color: #73788A;
-    font-weight: 300;
-    padding: 5px 0px;
-
-}
-
-.info-section .right-info .text-content h4 {
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-    color: #73788A;
-    padding-bottom: 20px;
-    text-align: justify;
-}
-
-.info-section .right-info .text-content h1:hover {
-    color: #3667C9;
-}
-
-.info-section .right-info .text-content h4:hover {
-    color: #3667C9;
-}
-
-.info-section .right-info .text-content p {
-    font-family: 'Roboto', sans-serif;
-    font-size: 14px;
-    color: #73788A;
-    font-weight: 300;
-    text-indent: 50px;
-}
-
-.info-section .right-info ul {
-    width: 100px;
-    display: flex;
-    justify-content: space-between;
-    list-style-type: none;
-    float: right;
-    padding: 50px 100px;
-}
-
-.info-section .right-info ul li a {
-    color: #C99836;
-    
-}
-
-main .info-section {
-    width: 90%;
-    margin: 40px auto;
-    display: flex;
-    justify-content: space-between;
-}
-
-main .info-section .left-info {
-    width: 45%;
-}
-
-main .info-section .left-info img {
+main .lecturer-section .left img {
     width: 600px;
-    height: 470px;
+    height: 450px;
     border-radius: 50px;
 }
 
-main .info-section .right-info {
+main .lecturer-section .right {
     width: 50%;
 }
 
-main .info-section .right-info .text-content {
+main .lecturer-section .right .text-content {
     padding: 50px 0px;
 }
 
-.info-section .right- .text-content h1 {
+.lecturer-section .right .text-content h1 {
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     color: #73788A;
     font-weight: 300;
     padding: 5px 0px;
-
 }
 
-.info-section .right-info .text-content h4 {
+.lecturer-section .right .text-content h4 {
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     color: #73788A;
@@ -188,15 +121,15 @@ main .info-section .right-info .text-content {
     text-align: justify;
 }
 
-.info-section .right-info .text-content h1:hover {
+.lecturer-section .right .text-content h1:hover {
     color: #3667C9;
 }
 
-.info-section .right-info .text-content h4:hover {
+.lecturer-section .right .text-content h4:hover {
     color: #3667C9;
 }
 
-.info-section .right-info .text-content p {
+.lecturer-section .right .text-content p {
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     color: #73788A;
@@ -204,7 +137,7 @@ main .info-section .right-info .text-content {
     text-indent: 50px;
 }
 
-.info-section .right-info ul {
+.lecturer-section .right ul {
     width: 100px;
     display: flex;
     justify-content: space-between;
@@ -213,7 +146,61 @@ main .info-section .right-info .text-content {
     padding: 50px 100px;
 }
 
-.info-section .right-info ul li a {
+.lecturer-section .right ul li a {
     color: #C99836;
     
 }
+
+main .info-section {
+    width: 90%;
+    margin: 40px auto;
+    display: flex;
+    justify-content: space-between;
+}
+
+main .info-section .left-info {
+    width: 45%;
+}
+
+main .info-section .right-info {
+    width: 50%;
+}
+
+.info-section .left-info h1 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    color: #C99836;
+    font-weight: 300;
+    padding: 5px 0px;
+}
+
+.info-section .left-info .text-container h4 {
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    color: #73788A;
+    font-weight: bold;
+    padding-bottom: 20px;
+}
+
+.info-section .left-info .text-container h4:hover {
+    color: #3667C9;
+}
+
+.info-section .left-info .text-container p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    color: #73788A;
+    font-weight: 300;
+}
+
+.info-section .left-info ul {
+    list-style-type: none;
+}
+
+.info-section .left-info ul li::before {
+    content: "\2022";
+    color: #3667C9;
+}
+
+
+
